Minor Changes in Admin controller